refactor: downgrade backend to Java 17, implement JSON logging, add Map diagnostics and front-to-back testing infrastructure